# wireshark-grib

./: .travis.yml  CMakeLists.txt  GRIB2.pnp  LICENSE  README.md  moduleinfo.h  plugin.rc.in
cmake/: FindGRIB_API.cmake  FindWireshark.cmake
src/: grib_api_internal.h  packet-grib.c
test/: grib2.py
test/data/: GRIB2.pcap
